<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/view_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E4E4">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detaills_appbar"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@android:color/transparent"
        app:elevation="0dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/details_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:padding="4dp"
                android:background="@drawable/shape_circle"
                app:layout_constraintBottom_toTopOf="@+id/details_title"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <ProgressBar
        android:id="@+id/details_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="8dp"
        android:theme="@style/WhiteProgress" />

    <ScrollView
        android:id="@+id/details_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animationCache="false"
        android:scrollbars="none"
        android:scrollingCache="false"
        android:overScrollMode="ifContentScrolls"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:nestedScrollingEnabled="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingBottom="30dp"
            android:gravity="center">


            <LinearLayout
                android:id="@+id/linearLayout_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/details_item_shape"
                android:elevation="2dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/collection_character"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_comics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/details_item_shape"
                android:elevation="2dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/collection_comics"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/linearLayout_creators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:background="@drawable/details_item_shape"
                android:elevation="2dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:text="@string/collection_creators"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/details_item_shape"
                android:elevation="2dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:text="@string/collection_events"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/details_item_shape"
                android:elevation="2dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:text="@string/collection_series"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_stories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/details_item_shape"
                android:elevation="2dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:text="@string/collection_stories"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>





</androidx.coordinatorlayout.widget.CoordinatorLayout>